--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <title>Call Python Function</title>
 </head>
 <body>
-    <h1>Click the button to call a Python function</h1>
+    <h1>Toggle radio</h1>
     <form>
         <button type="button" onclick="startRadio()">On</button>
         <button type="button" onclick="stopRadio()">Off</button>
